--- a/prj.conf
+++ b/prj.conf
@@ -22,7 +22,7 @@ CONFIG_LWM2M_CONN_MON_BEARER_MAX=2
 CONFIG_LWM2M_FIRMWARE_UPDATE_OBJ_SUPPORT=y
 CONFIG_LWM2M_LOCATION_OBJ_SUPPORT=n
 CONFIG_LWM2M_IPSO_SUPPORT=y
-CONFIG_LWM2M_IPSO_LIGHT_CONTROL=y
+CONFIG_LWM2M_IPSO_LIGHT_CONTROL=n
 CONFIG_LWM2M_IPSO_BUZZER=n
 CONFIG_LWM2M_IPSO_ONOFF_SWITCH=n
 CONFIG_LWM2M_IPSO_ONOFF_SWITCH_INSTANCE_COUNT=2
@@ -41,7 +41,7 @@ CONFIG_LWM2M_IPSO_TEMP_SENSOR=y
 CONFIG_LWM2M_IPSO_HUMIDITY_SENSOR=y
 CONFIG_LWM2M_IPSO_CONC_SENSOR=y
 CONFIG_GAS=n
-CONFIG_PMS=y
+CONFIG_PMS=n
 CONFIG_LWM2M_OPENLX_SP_PRTCL_SENSOR_INSTANCE_COUNT=3
 
 # DTLS settings
@@ -135,8 +135,8 @@ CONFIG_APP_LWM2M_CLIENT="t91-jak"
 CONFIG_I2C=y
 
 # UART settings
-CONFIG_SERIAL=y
-CONFIG_PRINTK=y
-CONFIG_UART_INTERRUPT_DRIVEN=y
-CONFIG_TRUSTED_EXECUTION_NONSECURE=y
-CONFIG_BOOT_BANNER=n
+# CONFIG_SERIAL=y
+# CONFIG_PRINTK=y
+# CONFIG_UART_INTERRUPT_DRIVEN=y
+# CONFIG_TRUSTED_EXECUTION_NONSECURE=y
+# CONFIG_BOOT_BANNER=n
